[package]
name = "keygen"
version = "0.1.0"
authors = ["Leonhard Markert <curiousleo@users.noreply.github.com>"]
edition = "2018"

[dependencies]
atty = "0.2"
termion = "1"

# We need subkey expiration, which the latest release 0.12.0 does not yet
# support.
[dependencies.sequoia-openpgp]
git = "https://gitlab.com/sequoia-pgp/sequoia.git"
rev = "f53c77752ff04c3713c175a76a06723042e681ae"

[dev-dependencies]
tempfile = "3"
test_bin = "0.2"
